Compile using Java 21